# ova

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  test_existing.store  test_existing_key.store
.github/workflows/: ci.yml
src/: app.rs  clip.rs  lib.rs  main.rs  store.rs  utils.rs
