[package]
name = "ova"
version = "0.1.6"
edition = "2021"
description = "CLI tool for managing your 2FA authentication codes written in pure Rust."
license = "MIT"
authors = ["gpskwlkr"]
repository = "https://github.com/gpskwlkr/ova"

# Static linking to make executable as small as possible
[profile.release]
lto = true 
opt-level = 'z'
panic = 'unwind'
codegen-units = 1
incremental = false

[dependencies]
anyhow = "1.0.70"
totp-rs = "5.0.1"

[dependencies.clap]
version = "4.2.4"
features = ["derive"]

[[bin]]
name = "ova"
path = "src/main.rs"
